# result

./: README.md  pyproject.toml
result/: __init__.py  monad.py
